Bug 307984 - Kontact/Akregator crashed
Summary: Kontact/Akregator crashed
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-06 18:26 UTC by Jan Binder
Modified: 2012-10-13 08:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Binder 2012-10-06 18:26:02 UTC
Application: kontact (4.10 pre)
KDE Platform Version: 4.9.80 (Compiled from sources)
Qt Version: 4.8.2
Operating System: Linux 3.6.0-exp-1 x86_64
Distribution: Debian GNU/Linux unstable (sid)

-- Information about the crash:
- What I was doing when the application crashed:

The last thing I did before the crash was marking a whole feed as read.
A short while later, Kontakt/Akregator crashed.

The crash can be reproduced some of the time.

-- Backtrace:
Application: Kontact (kontact), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fdd298e0780 (LWP 8275))]

Thread 3 (Thread 0x7fdd221ae700 (LWP 8276)):
#0  0x00007fdd3aeaa2d4 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fdd3ed47c0d in WTF::TCMalloc_PageHeap::scavengerThread (this=0x7fdd3f708280) at wtf/FastMalloc.cpp:2499
#2  0x00007fdd3ed47d19 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at wtf/FastMalloc.cpp:1622
#3  0x00007fdd3aea5b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007fdd38fb670d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fdd21895700 (LWP 8277)):
#0  0x00007fdd38fabac3 in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007fdd3778b684 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fdd3778b7a4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fdd3b266296 in QEventDispatcherGlib::processEvents (this=0x28341a0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fdd3b2368af in QEventLoop::processEvents (this=this@entry=0x7fdd21894e20, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fdd3b236b38 in QEventLoop::exec (this=0x7fdd21894e20, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fdd3b139d70 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fdd3b13cd0b in QThreadPrivate::start (arg=0x2833a60) at thread/qthread_unix.cpp:307
#8  0x00007fdd3aea5b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#9  0x00007fdd38fb670d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fdd298e0780 (LWP 8275)):
[KCrash Handler]
#6  0x00007fdd38f10475 in raise () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x00007fdd38f136f0 in abort () from /lib/x86_64-linux-gnu/libc.so.6
#8  0x00007fdd38f09621 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
#9  0x00007fdcd210109f in Akregator::SelectionController::articleHeadersAvailable (this=0x40213a0, job=0x4b18da0) at /media/wares/kdesrc/kde/kdepim/akregator/src/selectioncontroller.cpp:217
#10 0x00007fdd3b24d54f in QMetaObject::activate (sender=0x4b18da0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff2cff30f0) at kernel/qobject.cpp:3547
#11 0x00007fdd3b6c4a0f in KJob::finished (this=this@entry=0x4b18da0, _t1=_t1@entry=0x4b18da0) at /media/wares/kdesrc/build/kde/kdelibs/kdecore/kjob.moc:187
#12 0x00007fdd3b6c4a44 in KJob::~KJob (this=0x4b18da0, __in_chrg=<optimized out>) at /media/wares/kdesrc/kde/kdelibs/kdecore/jobs/kjob.cpp:68
#13 0x00007fdcd1c73149 in Akregator::ArticleListJob::~ArticleListJob (this=0x4b18da0, __in_chrg=<optimized out>) at /media/wares/kdesrc/kde/kdepim/akregator/src/articlejobs.h:108
#14 0x00007fdcd2101364 in Akregator::SelectionController::selectedSubscriptionChanged (this=0x40213a0, index=...) at /media/wares/kdesrc/kde/kdepim/akregator/src/selectioncontroller.cpp:259
#15 0x00007fdd3b24d54f in QMetaObject::activate (sender=0x83180f0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff2cff3290) at kernel/qobject.cpp:3547
#16 0x00007fdd3a6a2c7a in QItemSelectionModel::currentChanged (this=this@entry=0x83180f0, _t1=..., _t2=...) at .moc/release-shared/moc_qitemselectionmodel.cpp:173
#17 0x00007fdd3a6a2d69 in QItemSelectionModel::setCurrentIndex (this=0x83180f0, index=..., command=...) at itemviews/qitemselectionmodel.cpp:1175
#18 0x00007fdd3a65406a in QAbstractItemView::mousePressEvent (this=0x46a3c40, event=<optimized out>) at itemviews/qabstractitemview.cpp:1682
#19 0x00007fdd3a1982b3 in QWidget::event (this=0x46a3c40, event=0x7fff2cff4070) at kernel/qwidget.cpp:8367
#20 0x00007fdd3a542d56 in QFrame::event (this=0x46a3c40, e=0x7fff2cff4070) at widgets/qframe.cpp:557
#21 0x00007fdd3a650243 in QAbstractItemView::viewportEvent (this=0x46a3c40, event=0x7fff2cff4070) at itemviews/qabstractitemview.cpp:1644
#22 0x00007fdd3a693991 in QTreeView::viewportEvent (this=0x46a3c40, event=0x7fff2cff4070) at itemviews/qtreeview.cpp:1257
#23 0x00007fdd3b237cc6 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x46a3ad0, event=0x7fff2cff4070) at kernel/qcoreapplication.cpp:1025
#24 0x00007fdd3a1486dc in QApplicationPrivate::notify_helper (this=this@entry=0x2640b20, receiver=receiver@entry=0x46a3ad0, e=e@entry=0x7fff2cff4070) at kernel/qapplication.cpp:4552
#25 0x00007fdd3a14d3eb in QApplication::notify (this=<optimized out>, receiver=0x46a3ad0, e=0x7fff2cff4070) at kernel/qapplication.cpp:4099
#26 0x00007fdd3bccbcfe in KApplication::notify (this=0x7fff2cff4ce0, receiver=0x46a3ad0, event=0x7fff2cff4070) at /media/wares/kdesrc/kde/kdelibs/kdeui/kernel/kapplication.cpp:311
#27 0x00007fdd3b237b5e in QCoreApplication::notifyInternal (this=0x7fff2cff4ce0, receiver=0x46a3ad0, event=0x7fff2cff4070) at kernel/qcoreapplication.cpp:915
#28 0x00007fdd3a14954b in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#29 QApplicationPrivate::sendMouseEvent (receiver=0x46a3ad0, event=0x7fff2cff4070, alienWidget=0x46a3ad0, nativeWidget=0x43e7b50, buttonDown=0x7fdd3ac1e2a8, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3167
#30 0x00007fdd3a1c3fc4 in QETWidget::translateMouseEvent (this=this@entry=0x43e7b50, event=event@entry=0x7fff2cff47e0) at kernel/qapplication_x11.cpp:4523
#31 0x00007fdd3a1c2d51 in QApplication::x11ProcessEvent (this=0x7fff2cff4ce0, event=0x7fff2cff47e0) at kernel/qapplication_x11.cpp:3646
#32 0x00007fdd3a1e9bc2 in x11EventSourceDispatch (s=0x2643200, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x00007fdd3778b3b5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007fdd3778b6e8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fdd3778b7a4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fdd3b266276 in QEventDispatcherGlib::processEvents (this=0x2600ba0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#37 0x00007fdd3a1e983e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007fdd3b2368af in QEventLoop::processEvents (this=this@entry=0x7fff2cff4bb0, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007fdd3b236b38 in QEventLoop::exec (this=0x7fff2cff4bb0, flags=...) at kernel/qeventloop.cpp:204
#40 0x00007fdd3b23bcf8 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#41 0x000000000040357a in main (argc=1, argv=0x7fff2cff4e28) at /media/wares/kdesrc/kde/kdepim/kontact/src/main.cpp:219

Possible duplicates by query: bug 297265.

Reported using DrKonqi
Comment 1 Frank Osterfeld 2012-10-13 07:14:52 UTC
Git commit 17778821322d59cec64e0840fc74e1a814e5019a by Frank Osterfeld.
Committed on 13/10/2012 at 09:09.
Pushed by osterfeld into branch 'master'.

Do not assert when switching feeds too fast.

M  +1    -0    akregator/src/selectioncontroller.cpp

http://commits.kde.org/kdepim/17778821322d59cec64e0840fc74e1a814e5019a
Comment 2 Frank Osterfeld 2012-10-13 07:16:45 UTC
Git commit efcad75fac0e0167a1194dfbae48eb108a5744c1 by Frank Osterfeld.
Committed on 13/10/2012 at 09:09.
Pushed by osterfeld into branch 'KDE/4.9'.

Do not assert when switching feeds too fast.

M  +1    -0    akregator/src/selectioncontroller.cpp

http://commits.kde.org/kdepim/efcad75fac0e0167a1194dfbae48eb108a5744c1