Do not assert when switching feeds too fast.

BUG: 307984